# Lidium

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README  README.md  install.sh
src/: CMakeLists.txt  Parameters.h  common.h  main.cpp
src/Engine/: Configuration.cpp  Configuration.h  Dimension.cpp  Dimension.h  Engine.cpp  Engine.h  Glyphs.cpp  Glyphs.h  Node_engine.cpp  Node_engine.h  Scene.cpp  Scene.h
src/Engine/Data/: struct_UDPpacket.h  struct_cloud.h  struct_data.h  struct_dataFile.h  struct_frame.h  struct_generic.h  struct_glyph.h  struct_obstacle.h  struct_register.h  struct_subset.h  struct_voxelMap.h
src/Engine/OpenGL/: Camera.cpp  Camera.h  CoreGLengine.cpp  CoreGLengine.h  Dimension.cpp  Dimension.h  FrameBuffer.cpp  FrameBuffer.h  Shader.cpp  Shader.h  Textures.cpp  Textures.h
src/Engine/Scene/: Configuration.cpp  Configuration.h  Glyphs.cpp  Glyphs.h  Object.cpp  Object.h  Scene.cpp  Scene.h
src/Engine/shaders/: shader.fs  shader.vs
src/GUI/: GUI.cpp  GUI.h  GUI_Consol.cpp  GUI_Consol.h  GUI_Control.cpp  GUI_Control.h  GUI_LeftPanel.cpp  GUI_LeftPanel.h  GUI_Matching.cpp  GUI_Matching.h  GUI_MenuBar.cpp  GUI_MenuBar.h  GUI_Option.cpp  GUI_Option.h  GUI_Radiometry.cpp  GUI_Radiometry.h  GUI_Registration.cpp  GUI_Registration.h  GUI_windows.cpp  GUI_windows.h  Node_gui.cpp  Node_gui.h
src/GUI/Box/: GUI_windows.cpp  GUI_windows.h  WIN_attribut.cpp  WIN_attribut.h  WIN_camera.cpp  WIN_camera.h  WIN_cloud.cpp  WIN_cloud.h  WIN_loading.cpp  WIN_loading.h  WIN_operation.cpp  WIN_operation.h  WIN_shader.cpp  WIN_shader.h  Window_table.h
src/GUI/Control/: GUI.cpp  GUI.h  GUI_Color.cpp  GUI_Color.h  GUI_Control.cpp  GUI_Control.h  GUI_FileManager.cpp  GUI_FileManager.h  GUI_Initialization.cpp  GUI_Initialization.h  GUI_Option.cpp  GUI_Option.h  GUI_Selection.cpp  GUI_Selection.h
src/GUI/Dynamic/: GUI_Online.cpp  GUI_Online.h  GUI_Player.cpp  GUI_Player.h
src/GUI/Interface/: GUI_Capture.cpp  GUI_Capture.h  GUI_Network.cpp  GUI_Network.h
src/GUI/Window/: GUI_Consol.cpp  GUI_Consol.h  GUI_LeftPanel.cpp  GUI_LeftPanel.h  GUI_MenuBar.cpp  GUI_MenuBar.h  struct_consol.h
src/Interface/: Node_interface.cpp  Node_interface.h
src/Interface/Capture/: Capture.cpp  Capture.h
src/Load/: Loader.cpp  Loader.h  Node_load.cpp  Node_load.h  dataExtraction.cpp  dataExtraction.h
src/Load/CSV/: CSV_parser.h  CSV_row.h  CSV_state.h
src/Load/Format/: file_CBOR.cpp  file_CBOR.h  file_CSV.cpp  file_CSV.h  file_JSON.cpp  file_JSON.h  file_OBJ.cpp  file_OBJ.h  file_PCAP.cpp  file_PCAP.h  file_PCD.cpp  file_PCD.h  file_PLY.cpp  file_PLY.h  file_PTS.cpp  file_PTS.h  file_PTX.cpp  file_PTX.h  file_XYZ.cpp  file_XYZ.h
src/Load/Processing/: Extractor.cpp  Extractor.h  Loader.cpp  Loader.h  Pather.cpp  Pather.h  Saver.cpp  Saver.h  Zenity.cpp  Zenity.h
src/Module/: CMakeLists.txt  Node_module.cpp  Node_module.h  install.sh
src/Operation/: Attribut.cpp  Attribut.h  Filter.cpp  Filter.h  Node_operation.cpp  Node_operation.h  Operation.cpp  Operation.h  Plotting.cpp  Plotting.h  Transforms.cpp  Transforms.h
src/Operation/Color/: Color.cpp  Color.h  Colormap.cpp  Colormap.h  Heatmap.cpp  Heatmap.h
src/Operation/Dynamic/: Online.cpp  Online.h  Player.cpp  Player.h  Saving.cpp  Saving.h
src/Operation/Function/: BundleByClass.cpp  BundleByClass.h  CoordTransform.cpp  CoordTransform.h  Extraction.cpp  Extraction.h  NearestNeighbors.cpp  NearestNeighbors.h  Plotting.cpp  Plotting.h  Selection.cpp  Selection.h
src/Operation/Functions/: BundleByClass.cpp  BundleByClass.h  CoordTransform.cpp  CoordTransform.h  Extraction.cpp  Extraction.h  Heatmap.cpp  Heatmap.h  NearestNeighbors.cpp  NearestNeighbors.h  RegionGrowing.cpp  RegionGrowing.h  Segmentation.cpp  Segmentation.h  Selection.cpp  Selection.h
src/Operation/Optimization/: Fitting.cpp  Fitting.h  Newton.cpp  Newton.h  Polyfit.h  SVD.cpp  SVD.h  SpeudoInverse.cpp  SpeudoInverse.h
src/Operation/Transformation/: Attribut.cpp  Attribut.h  Filter.cpp  Filter.h  Transforms.cpp  Transforms.h
src/Radiometry/: Linearization.cpp  Linearization.h  Radiometry.cpp  Radiometry.h  Radiometry_plotting.cpp
src/Radiometry/Correction/: RadarEquation.cpp  RadarEquation.h  Separation_global.cpp  Separation_global.h  Separation_local.cpp  Separation_local.h  Surfacic_globalPiecewise.cpp  Surfacic_globalPiecewise.h  Surfacic_local.cpp  Surfacic_local.h  Surfacic_segmented.cpp  Surfacic_segmented.h  Surfacic_simplified.cpp  Surfacic_simplified.h  Surfacic_targeted.cpp  Surfacic_targeted.h
src/Registration/: Algo_PCL.cpp  Algo_PCL.h  MutualInformation.cpp  MutualInformation.h  Registration.cpp  Registration.h
src/Registration/Pipeline/: ICP.cpp  ICP.h  ICP_Matching.cpp  ICP_Matching.h  ICP_Optimization.cpp  ICP_Optimization.h  ICP_Rejection.cpp  ICP_Rejection.h  Keypoint.cpp  Keypoint.h
src/Specific/: Color.h  color.h  fct_Display.h  fct_OpenGL.h  fct_Transtypage.h  fct_chrono.h  fct_maths.h  fct_system.h  fct_terminal.h  fct_timer.h  fct_transtypage.h  fct_watcher.h  fct_zenity.h  note.h  struct_config.h  struct_consol.h  struct_generic.h  struct_glyph.h  struct_pointCloud.h
src/Test/: Test.cpp  catch.hpp
(+2056 files in other folders)
